[package]
name = "zkpf-tachyon-wallet"
version = "0.1.0"
edition = "2021"
description = "Unified multi-chain Tachyon-inspired wallet for zkpf"
license = "MIT OR Apache-2.0"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-mina = { path = "../zkpf-mina" }
zkpf-starknet-l2 = { path = "../zkpf-starknet-l2" }
zkpf-axelar-gmp = { path = "../zkpf-axelar-gmp" }
zkpf-zcash-orchard-wallet = { path = "../zkpf-zcash-orchard-wallet" }
zkpf-orchard-pof-circuit = { path = "../zkpf-orchard-pof-circuit" }
zkpf-orchard-inner = { path = "../zkpf-orchard-inner" }
zkpf-wallet-state = { path = "../zkpf-wallet-state" }
# zkpf-omni-bridge = { path = "../zkpf-omni-bridge", optional = true }  # Disabled: Solana version conflict

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake3 = "1.5"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
bincode = "1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Optional NEAR integration
near-sdk = { version = "5.0", optional = true }
near-crypto = { version = "0.20", optional = true }

[features]
default = []
near = ["near-sdk", "near-crypto"]
# omni-bridge = ["zkpf-omni-bridge"]  # Disabled: Solana version conflict
# full = ["near", "omni-bridge"]  # Disabled: Solana version conflict
full = ["near"]

[dev-dependencies]
tokio-test = "0.4"

