[package]
name = "zkpf-x402"
version = "0.1.0"
edition = "2021"
description = "x402 Payment Required protocol implementation for Zcash (ZEC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/zkpf"
documentation = "https://docs.rs/zkpf-x402"
keywords = ["zcash", "x402", "payment", "http", "cryptocurrency"]
categories = ["cryptography", "web-programming"]

[dependencies]
# Zcash dependencies
zcash_primitives = "0.20"
zcash_keys = { version = "0.5", features = ["sapling"] }
zcash_protocol = "0.4"
zcash_client_backend = "0.16"
zcash_address = "0.6"
sapling = { package = "sapling-crypto", version = "0.4" }

# Cryptographic primitives
blake2b_simd = "1.0"
bech32 = "0.11"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }

# HTTP and serialization
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "1.0"
url = "2.5"
async-trait = "0.1"

# Optional: async runtime support
tokio = { version = "1.0", features = ["rt", "sync"], optional = true }

# Optional: HTTP framework integrations
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1.0", optional = true }

# gRPC client for lightwalletd
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# HTTP client for REST verification
reqwest = { version = "0.12", features = ["json"], optional = true }

# QR code generation
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
proptest = "1.4"
axum = "0.8"
tower = "0.5"
http = "1.0"

[features]
default = ["http-core"]
http-core = ["dep:http"]
axum-middleware = ["dep:axum", "dep:tower", "http-core", "dep:tokio"]
lightwalletd = ["dep:reqwest", "dep:tokio"]
lightwalletd-rest = ["dep:reqwest", "dep:tokio"]
qrcode = ["dep:qrcode", "dep:image"]
full = ["axum-middleware", "lightwalletd", "lightwalletd-rest", "qrcode"]

[[example]]
name = "axum_server"
required-features = ["axum-middleware"]

