[package]
name = "zkpf-mina-kimchi-wrapper"
version = "0.1.0"
edition = "2021"
description = "BN254 wrapper circuit for Mina Proof of State (Kimchi) verification"
readme = "README.md"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../../zkpf-common" }

# Halo2 proving system (BN254) - matches workspace versions
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["circuit-params"] }
halo2curves_axiom = { version = "0.7", package = "halo2curves-axiom", default-features = false, features = ["bn256-table"] }
halo2-base = { path = "../../vendor/halo2-base" }

# Pasta curves for Kimchi verification (foreign-field arithmetic)
# These are Mina's native curves (Pallas/Vesta)
pasta_curves = "0.5"

# Cryptographic hashes
blake3 = "1.5"
poseidon-primitives = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
rand = "0.8"
num-bigint = "0.4"
dirs = "5.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Enable mock mode for development without full Kimchi integration
mock = []

